# Autocredd

./: .dockerignore  .gitignore  .railwayignore  AUTHENTICATION_SYSTEM.md  CLIENTES_ATUALIZADOS_COMPLETO.md  CLIENTES_FUNCIONANDO.md  COMO_EDITAR_JUNTOS.md  CONCLUSAO_FINAL_QR_CODES.md  CUSTOM_AGENTS_INTEGRATION.md  CUSTOS_QR_REAL.md  DEPLOY_RAILWAY_AGORA.md  Dockerfile  Dockerfile.evolution  Dockerfile.light  EVOLUTION_INTEGRATION.md  EVOLUTION_SAAS_SETUP.md  FORCE_QR_FIX_DEPLOY.txt  FORCE_RAILWAY_REBUILD_NOW.txt  GUIA_DEPLOY_PRODUCAO.md  IMPLEMENTACOES_CONCLUIDAS.md  INSTRUCOES_ACESSO.md  INSTRUCOES_NGROK_MANUAL.md  INTEGRATION_STATUS.md  MELHORIAS_LEADS.md  Makefile  NOVA_ABA_CLIENTES.md  NOVA_ABA_PROSPECCAO.md  Procfile  RAILWAY_DEPLOY.md  RAILWAY_FORCE_DEPLOY.txt  README-EVOLUTION-SETUP.md  README.md  README_INTEGRATION.md  README_QRCODE_SOLUTION.md  REMOCAO_EMAIL_CLIENTES.md  SOLUCAO_FINAL_QR_REAL.md  WHATSAPP_INTEGRATION.md  WHATSAPP_SETUP.md  app_fixed.py  app_real.py  (+102 more)
BACKUP_COMPLETO/: HISTORICO_IMPLEMENTACAO.md  frontend_production.html  index_baileys_real.js  package_dependencies.json  railway_config.json  server_v2_working.js
NEW_REPO_CLEAN/: package.json
NEW_REPO_FILES/: package.json  server.js
autocred-fresh/: index.html
dist_frontend/: index.html
frontend_bolt/: .gitignore  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
mongodb/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0-123943072312040437.wt  collection-2-123943072312040437.wt  collection-4-123943072312040437.wt  sizeStorer.wt  (+7 more)
(+84 files in other folders)
