[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "backend_autocred"
version = "0.1.0"
authors = [
  { name="AutoCred Team" },
]
description = "Sistema de Gestão de Leads para Correspondentes Bancários"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools]
packages = ["backend_autocred"] 